major updates to c++ files, speed, returns observations.

--- a/README.Rmd
+++ b/README.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(eval=FALSE, echo=TRUE)
 <!-- Badges -->
 [![CRAN status](https://www.r-pkg.org/badges/version/ctsmTMB)](https://CRAN.R-project.org/package=ctsmTMB)
 [![R-CMD-check](https://github.com/phillipbvetter/ctsmTMB/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/phillipbvetter/ctsmTMB/actions/workflows/R-CMD-check.yaml)
-[![](https://cranlogs.r-pkg.org/badges/ctsmTMB?color=brightgreen)](https://cran.rstudio.com/web/packages/ctsmTMB/index.html)
+[![](https://cranlogs.r-pkg.org/badges/ctsmTMB?color=brightgreen)](https://CRAN.R-project.org/package=ctsmTMB)
 
 <!-- add white space -->
 $~$
@@ -37,7 +37,7 @@ $$
 
 That is, the latent state $x_t$ is a continuous-time process whose evolution is governed by an (It√¥) stochastic differential equation with drift $f$, and diffusion $g$. We may estimate the latent state distribution and the fixed effects parameters $p$ of the system through likelihood inference using the discrete-time measurements $\mathcal{Y}_{k} = \{y_{t_0}, y_{t_1},...,y_{t_k}\}$. These measurements are related to the latent state through the link function $h$ , but they are also contaminated by zero-mean Gaussian measurement noise $\varepsilon_{t} \sim \mathcal{N}\left(0, \Sigma(t_k, x_{t_k}, u_{t_k}, p) \right)$.
 
-Users interact with the *ctsmTMB* package via the available methods of the exported *[R6](https://cran.r-project.org/web/packages/R6/index.html)* `ctsmTMB` class. The most important of these are `addSystem` and `addObs`/`setVariance` used to specify the functions $f$, $g$, and $h$, $\Sigma$ respectively. The functions are specified indirectly by writing symbolic equation expressions, making it relatively easy to do, but limiting the allowed operations to compositions of simple mathematical functions on scalars.
+Users interact with the *ctsmTMB* package via the available methods of the exported *[R6](https://CRAN.R-project.org/package=R6)* `ctsmTMB` class. The most important of these are `addSystem` and `addObs`/`setVariance` used to specify the functions $f$, $g$, and $h$, $\Sigma$ respectively. The functions are specified indirectly by writing symbolic equation expressions, making it relatively easy to do, but limiting the allowed operations to compositions of simple mathematical functions on scalars.
 
 State and parameter inference and forecasting is carried out using the following available methods:
 
@@ -51,7 +51,7 @@ State and parameter inference and forecasting is carried out using the following
 
 3. `filter`:
 
-    Performs state filtration (only availabel for Kalman filters).
+    Performs state filtration (Kalman filters only).
 
 4. `smoother`:
 
@@ -59,11 +59,11 @@ State and parameter inference and forecasting is carried out using the following
 
 5. `predict`:
 
-    Performs k-step forecasting of the system mean and variance. The calculations for these may be carried out in either **R** or in **C++** using `Rcpp` for additional speed.
+    Performs k-step forecasting of the system mean and variance (Kalman filters only).
 
 6. `simulate`:
 
-    Performs k-step forecasting of the entire distribution through stochastic path simulations. The calculations for these may be carried out in either **R** or in **C++** using `Rcpp` for additional speed.
+    Performs k-step forecasting through stochastic path simulations (Kalman filters only).
 
 <!-- Estimation Methods -->
 # Estimation Methods
@@ -93,7 +93,7 @@ The Unscented Kalman Filter implementation is based on *Algorithm 4.7* in [S. S√
 
 The state-reconstructions based on the `laplace` method are *smoothed* estimates, meaning that states are optimized jointly conditioned on all observations. The Laplace approximation is natively built-into and completely handled by **TMB**. The additional method `laplace.thygesen` is an implementation of the the stability-improved Laplace approximation for state-dependent diffusion due to [Thygesen, 2025](https://arxiv.org/abs/2503.21358).
 
-A distrinct advantage of the laplace methods over the Kalman filters is the possibility for unimodal non-Gaussian observation densities to accommodate the need for e.g. heavier distribution tails (not yet supported in the package though).
+A distinct advantage of the laplace methods over the Kalman filters is the possibility for unimodal non-Gaussian observation densities to accommodate the need for e.g. heavier distribution tails (not yet supported in the package though).
 
 <!-- Installation -->
 # Compiler Installation
@@ -124,7 +124,7 @@ install.packages("ctsmTMB", type="source")
 
 The development version is available on GitHub and R-universe:
 ```{r}
-remotes::install_github(repo="phillipbvetter/ctsmTMB", dependencies=TRUE)
+remotes::install_github(repo="phillipbvetter/ctsmTMB")
 ```
 ```{r}
 install.packages('ctsmTMB', repos = c('https://phillipbvetter.r-universe.dev'), type="source")
@@ -143,10 +143,6 @@ You can access the documentation for all methods with
 ```{r, eval=FALSE}
 ?ctsmTMB
 ```
-
-# Getting Started
-
-We provide an introductory code example below.
 
 You can also visit the package [webpage](https://phillipbvetter.github.io/ctsmTMB/index.html) and browse the vignettes for further details, see in particular [Getting Started](https://phillipbvetter.github.io/ctsmTMB/articles/ctsmTMB.html).
 
@@ -249,32 +245,37 @@ cbind(true.pars, fitted.pars, difference=true.pars - fitted.pars)
 
 par(mfrow=c(3,1))
 # Plot prior predictions (1-step predictions) against simulation (truth) and observations (data)
-df.est <- cbind(fit$states$mean$prior, sd=fit$states$sd$prior$x)
-plot(x=df.est$t, y=df.est$x, type="n", main="1-Step State Estimates vs Observations", xlab="Time", ylab="",  ylim=c(-3,3))
-polygon(c(df.est$t, rev(df.est$t)), c(df.est$x+1.96*df.est$sd, rev(df.est$x-1.96*df.est$sd)), col="grey70", border=NA)
-lines(df.est$t, df.est$x, col="steelblue", lwd=2)
+df.est <- cbind(fit$states$mean$prior, x.sd=fit$states$sd$prior[,"x"])
+t <- df.est[,"t"]
+x <- df.est[,"x"]
+x.sd <- df.est[,"x.sd"]
+plot(x=t, y=x, type="n", main="1-Step State Estimates vs Observations", xlab="Time", ylab="",  ylim=c(-3,3))
+polygon(c(t, rev(t)), c(x+1.96*x.sd, rev(x-1.96*x.sd)), col="grey70", border=NA)
+lines(t, x, col="steelblue", lwd=2)
 points(df.obs$t, df.obs$y, col="tomato", pch=16, cex=0.7)
 
-# Predict to obtain k-step-ahead predictions to see model forecasting ability
+# Predict to obtain 10-step-ahead predictions to see model forecasting ability
 pred.10step <- model$predict(df.obs, k.ahead=10, method="ekf", return.k.ahead = 10)
 
 # Plot 10 step predictions vs data
-dfp <- pred.10step$states[c("t.j","x","var.x")]
-dfp[,4] <- sqrt(dfp["var.x"])
-names(dfp) <- c("t","x","var","sd")
-plot(x=dfp$t, y=dfp$x, type="n", main="10 Step Predictions vs Observations", xlab="Time", ylab="", ylim=c(-3,3))
-polygon(c(dfp$t, rev(dfp$t)), c(dfp$x+1.96*dfp$sd, rev(dfp$x-1.96*dfp$sd)), col="grey70", border=NA)
-lines(dfp$t, dfp$x, col="steelblue", lwd=2)
+dfp <- pred.10step$states[,c("t.j","x","var.x")]
+t <- dfp[,"t.j"]
+x <- dfp[,"x"]
+x.sd <- sqrt(dfp[,"var.x"])
+plot(x=t, y=x, type="n", main="10 Step Predictions vs Observations", xlab="Time", ylab="", ylim=c(-3,3))
+polygon(c(t, rev(t)), c(x+1.96*x.sd, rev(x-1.96*x.sd)), col="grey70", border=NA)
+lines(t, x, col="steelblue", lwd=2)
 points(df.obs$t, df.obs$y, col="tomato", pch=16, cex=0.7)
 
-# Perform a full prediction i.e. without updating to data along the way
-dfp <- model$predict(df.obs, method="ekf")$states
+# Compare full (i.e. without updating to data along the way) prediction and simulation
+dfp <- model$predict(df.obs, method="ekf")
+xpred <- dfp$states[,"x"]
+sdf <- model$simulate(df.obs, method="ekf", n.sims=10)
+t <- sdf$times$i0[,"t.j"]
+xsim <- sdf$states$x$i0
 
-# Perform full simulations - 10 sample trajectories
-sdf <- model$simulate(df.obs, method="ekf", n.sims=10)$states$x$i0
-sdf.sim <- sdf[,6:ncol(sdf)]
-matplot(sdf$t.j, sdf.sim, type="l", lty="solid", col="grey70", main="No Update Prediction and Simulations vs Observations", xlab="Time")
-lines(dfp$t.j, dfp$x, col="steelblue", lwd=2)
+matplot(t, xsim, type="l", lty="solid", col="grey70", main="No Update Prediction and Simulations vs Observations", xlab="Time")
+lines(t, xpred, col="steelblue", lwd=2)
 points(df.obs$t, df.obs$y, col="tomato", pch=16, cex=0.7)
 
 # Perform residual analysis
